--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "element-ui": "^2.7.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
