--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.6.8",
+    "axios": "^0.18.0",
     "element-ui": "^2.7.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.3.4",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
