--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
@@ -20,10 +21,8 @@
     "jvectormap": "^2.0.4",
     "lodash": "^4.17.11",
     "vue": "^2.6.10",
-
     "vue-apexcharts": "^1.3.4",
     "vue-d2b": "^1.0.15",
-
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
